# Open-Photos

./: .gitignore  README.md  package-lock.json  package.json
.github/workflows/: ci.yml
docs/superpowers/plans/: 2026-07-01-reviewed-bug-fixes.md
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  benchmark.db  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/ai/: analyzer.rs  clustering.rs  index.rs  mod.rs
src-tauri/src/ai/models/: README.md
src-tauri/src/commands/: albums.rs  duplicates.rs  faces.rs  favorites.rs  file.rs  index.rs  metadata.rs  mod.rs  photos.rs  scan.rs  trash.rs
src-tauri/src/db/: mod.rs  models.rs  photos.rs  queries.rs  schema.sql
src-tauri/src/metadata/: exif.rs  mod.rs
src-tauri/src/scanner/: albums.rs  classifier.rs  duplicates.rs  favorites.rs  mod.rs  ntfs.rs  organizer.rs  pipeline.rs  trash.rs  walker.rs
src-tauri/src/thumbs/: cache.rs  generator.rs  mod.rs
src/components/: AddToAlbumDialog.tsx  AlbumDetailPage.tsx  AlbumsPage.tsx  ConfirmDialog.tsx  ContextMenu.tsx  CreateAlbumDialog.tsx  DuplicatesPage.tsx  EmptyState.tsx  ErrorBoundary.tsx  FaceDetectProgressHUD.tsx  FaceTagDialog.tsx  FavoritesPage.tsx  Header.tsx  Lightbox.tsx  MapPage.tsx  MergePeopleDialog.tsx  People.tsx  PeoplePage.tsx  PersonDetailPage.tsx  PhotoFaceOverlay.tsx  PhotoGrid.tsx  PhotoInfoPanel.tsx  PhotoLightbox.tsx  PhotoTile.tsx  PhotosPage.tsx  RenamePersonDialog.tsx  ScanPage.tsx  ScanProgressHUD.tsx  SettingsPage.tsx  Sidebar.tsx  SkeletonTile.tsx  Timeline.tsx  ToastContainer.tsx  Topbar.tsx  TrashPage.tsx  YearsPage.tsx
src/contexts/: ThemeContext.tsx
src/hooks/: useGlobalShortcuts.ts  usePeople.ts  usePhotos.ts  useThumbnail.ts  useTimeline.ts
src/lib/: tauri.ts
src/store/: useAlbumsStore.ts  useFavoritesStore.ts  useSavedPathsStore.ts  useSettingsStore.ts  useStore.ts  useToastStore.ts
