[package]
name = "tauri-applocal-photos"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"
default-run = "tauri-applocal-photos"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_applocal_photos_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.7", features = ["runtime-tokio", "tls-native-tls", "sqlite"] }
tokio = { version = "1", features = ["full"] }
image = "0.24"
kamadak-exif = "0.5"
walkdir = "2"
notify = "6"
ort = "2.0.0-rc.4"
ndarray = "0.15"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
anyhow = "1"
base64 = "0.21"
winapi = { version = "0.3.9", features = ["fileapi", "winnt", "handleapi"] }
rayon = "1.11.0"
mft = "0.7.0"

